--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^1.21.1
   firebase_auth: ^3.7.0
   cloud_firestore: ^3.4.6
+  modal_progress_hud: ^0.1.3
+  modal_progress_hud_nsn: ^0.3.0
 
 dev_dependencies:
   flutter_test:
