--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,13 @@ dependencies:
   cloud_firestore: ^3.4.6
   modal_progress_hud: ^0.1.3
   modal_progress_hud_nsn: ^0.3.0
+  flutter_launcher_icons: ^0.10.0
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/logoiron.png"
 
 dev_dependencies:
   flutter_test:
